# examples-py

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/date_agent/: README.md  pyproject.toml
examples/date_agent/date_agent/: __init__.py  main.py
examples/deep_research/: EXAMPLE_OUTPUT.md  README.md  pyproject.toml
examples/deep_research/deep_research/: __init__.py  agent.py  fixtures.json  main.py  mock_searcher.py  models.py  searcher.py  text.py
examples/multihop_rag/: README.md  pyproject.toml  setup_data.py
examples/multihop_rag/multihop_rag/: __init__.py  agent.py  main.py  models.py  retriever.py
examples/rag_agent/: README.md  illustration.py  pyproject.toml  setup_data.py
examples/rag_agent/rag_agent/: __init__.py  agent.py  main.py  models.py  retriever.py  tool_call_agent.py  wikipedia_loader.py
examples/rag_agent/recording/: demo.tape
examples/unit_converter/: README.md  benchmark.py  intents.json  pyproject.toml  tutorial.md
examples/unit_converter/unit_converter/: __init__.py  main.py
